# word-frequencies

./: .gitignore  .tool-versions  justfile  pyproject.toml
proto/: frequency.proto  frequency_pb2.py  frequency_pb2.pyi
word_counter/: cheat.py  counter.py  langdetect.py  main.py  subtitles.py  utils.py
