[tool.poetry]
name = "opensubtitle-counter"
version = "0.1.0"
description = ""
authors = ["Tyler Nickerson <nickersoft@gmail.com>"]
readme = "README.md"
packages = [{include = "opensubtitle_counter"}]

[tool.poetry.dependencies]
python = ">3.11, <4"
pandas = "^1.5.3"
requests = "^2.28.2"
alive-progress = "^3.0.1"
langdetect = "^1.0.9"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
